# tasklets

./: .dockerignore  .gitignore  .npmignore  CMakeLists.txt  Dockerfile.build  Dockerfile.cross  README.md  binding.gyp  build_log.txt  jest.config.js  package-lock.json  package.json  test-auto-scheduling.js  test-typescript.ts  toolchain-mingw.cmake  tsconfig.json
.agent/workflows/: publish-npm.md
.github/workflows/: build.yml  ci.yml  release.yml
benches/: batch.js  crypto-hash.js  data-analysis.js  fastmode.js  image-processing.js  optimization-benchmark.js  overhead.js  run.js  runAll.js  scaling-test.js
benches/optimizations/: benchmark-optimizations.js  quick-bench.js  test-optimizations.js
docs/: README.md  adaptive-configuration.md  adaptive.md  api-reference.md  api_summary.md  architecture-comparison.md  auto-scheduler.md  benchmarks.md  best-practices.md  component-usage-analysis.md  configuration.md  examples.md  getting-started.md  improvement-roadmap.md  metrics.md  migration-guide.md  performance-guide.md  solid-refactoring.md  threading-model.md  troubleshooting.md
docs/examples/: adaptive-automation.js  adaptive-batch-processing.js  adaptive-features-demo.js  auto-scheduler-demo.js  automatic-integration.js  basic.js  batch-processing.js  clean-shutdown.js  cryptography.js  csv-processing.js  data-processing.js  database-operations.js  dynamic-memory-limits.js  error-handling.js  fibonacci-batch.js  fibonacci-runAll.js  fibonacci-spawnMany.js  fibonacci.js  file-analysis.js  force-exit-example.js  fully-automatic-demo.js  image-processing.js  json-transformation.js  mathematical-computations.js  matrix-multiplication.js  memory-management.js  modern-api-usage.js  monte-carlo-pi.js  performance-monitoring.js  prime-numbers.js  real-time-processing.js  real-world-ecommerce.js  test-auto-scheduling.js  url-fetching.js  user-friendly-apis.js  user-friendly-automation.js  visual-context-switching.js  web-api-load-test.js  web-api.js  web-scraping.js
docs/examples/advanced/: 01-adaptive-optimization.js  02-adaptive-scaling.js  02-clean-shutdown.js  03-metrics-monitoring.js
docs/examples/basics/: 01-hello-parallel.js  02-error-handling.js  03-configuration.js
docs/examples/benchmarks/: cryptography.js  data-analysis.js  image-processing.js  matrix-multiplication.js
docs/examples/parallel/: 01-run-all.js  (+2 more)
examples/: adaptive-features-demo.js  user-friendly-automation.js
lib/: adaptive.js  auto_config.js  config.js  core.js  index.d.ts  index.js  logger.js  metrics.js  stats.js  tasklets.d.ts  tasklets.js  worker.js
lib/api/: tasklets.d.ts  tasklets.js
lib/automation/: auto_config.js
lib/config/: adaptive.js  index.js  optimizer.js
lib/core/: index.js  logger.js  stats.js
lib/performance/: index.js
scripts/: install.js  run-examples.js  run_cctest.sh
src/: tasklets.cpp  tasklets.hpp
src/bindings/: napi_wrapper.cpp  napi_wrapper.hpp  tasklets_api.cpp
src/core/: config.cpp  config.hpp  core.hpp  logger.cpp  logger.hpp  memory_manager.cpp  memory_manager.hpp  microjob.cpp  microjob.hpp  native_thread_pool.cpp  native_thread_pool.hpp  stats.cpp  stats.hpp  tasklet.cpp  tasklet.hpp
tests/cctest/: README.md  cctest.cpp  cctest.h  test_auto_config.cpp  test_auto_scheduler.cpp  test_logger.cpp  test_memory_manager.cpp  test_microjob.cpp  test_native_thread_pool.cpp  test_runner.cpp  test_stats.cpp  test_tasklet.cpp
tests/js/: configuration.test.js  core-api.test.js  error-handling.test.js  integration.test.js  memory-limit.test.js  memory-management.test.js  performance-stats.test.js  security.test.js  system-management.test.js  test-typescript.ts  timeout-cleanup.test.js  v2-2-features.test.js
(+23 files in other folders)
